// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User should handle USER_LOGIN_REQUEST 1`] = `
Object {
  "isAuthenticated": false,
  "isRunning": true,
  "rehydrated": false,
}
`;

exports[`User should handle USER_LOGIN_SUCCESS 1`] = `
Object {
  "isAuthenticated": true,
  "isRunning": false,
  "rehydrated": false,
}
`;

exports[`User should handle USER_LOGOUT_SUCCESS 1`] = `
Object {
  "isAuthenticated": false,
  "isRunning": false,
  "rehydrated": false,
}
`;

exports[`User should handle persist/REHYDRATE with payload 1`] = `
Object {
  "isAuthenticated": false,
  "isRunning": false,
  "logged": true,
  "rehydrated": true,
}
`;

exports[`User should handle persist/REHYDRATE without payload 1`] = `
Object {
  "isAuthenticated": false,
  "isRunning": false,
  "rehydrated": true,
}
`;

exports[`User should return the initial state 1`] = `
Object {
  "isAuthenticated": false,
  "isRunning": false,
  "rehydrated": false,
}
`;
